--- a/style.css
+++ b/style.css
@@ -1,1 +1,43 @@
+body{
+  background-color: lightsteelblue;
+  color: white;
+  font-family: monospace;
+  margin: 10px
+}
+
+h1 {
+  border: 3px double darkgrey; 
+  padding-left: 5px;
+}
+
+h2{
+  font-size:25px;
+  border-bottom: 3px double darkgrey;
+  padding-left: 5px;
+}
+
+h3 {
+  text-decoration: wavy underline grey;
+  padding-left: 5px;
+}
+
+h4 {
+  font-style: italic; 
+  padding-left: 10px;
+}
+
+h5 {
+  padding-left: 10px;
+}
+
+
+.exp-header {
+  text-transform
+  
+}
+
+.jobexp {
+  
+}
+
 
