--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body{
   background-color: lightsteelblue;
   color: white;
   font-family: monospace;
-  margin: 10px
 }
 
 h1 {
@@ -17,18 +16,21 @@ h2{
 }
 
 h3 {
-  text-decoration: wavy underline grey;
+  text-decoration: wavy underline lightskyblue;
   padding-left: 5px;
+  font-size: 20px
 }
 
 h4 {
   font-style: italic; 
-  padding-left: 10px;
+  padding-left: 5px;
+  font-size: 15px;
 }
 
 h5 {
-  padding-left: 10px;
+  padding-left: 5px;
 }
+
 
 
 .exp-header {
@@ -46,6 +48,6 @@ h5 {
     margin-right: 200px;
     padding: 10px 150px 10px 150px;
     border-radius: 15px;
-    background-color: #C4CECD;
+    background-color: lightslategrey;
     text-align: left;
 }
