--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h5 {
     margin-top: 30px;
     margin-left: 150px;
     margin-right: 150px;
+    margin-bottom: 30px;
     padding: 10px 150px 10px 150px;
     border-radius: 30px;
     background-color: lightslategrey;
